2008-05-20  Daniel Abramov  <ex@vingrad.ru>

	* ru.po: Updated Russian translation.

2008-05-20  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* POTFILES.in: Updated

2008-05-12  Luca Ferretti  <elle.uca@libero.it>

	* it.po: Italian translation copied from stable branch.

2008-05-10  Jonh Wendell <jwendell@gnome.org>

	* pt_BR.po: Brazilian Portuguese translation updated by Rodrigo Flores.

2008-05-06  Aaron Bockover  <abock@gnome.org>

	* POTFILES.in: Updated

2008-05-01  Gabriel Burt  <gabriel.burt@gmail.com>

	* POTFILES.in: Fixed up

2008-04-30  Jordi Mas <jmas@softcatala.org>

	* ca.po: Updated Catalan translation

2008-04-27  Gabor Kelemen  <kelemeng@gnome.org>

	* hu.po: Translation updated.

2008-04-27  Gabor Kelemen  <kelemeng@gnome.org>

	* POTFILES.in: Shut up Damned Lies

2008-04-25  Jordi Mas <jmas@softcatala.org>

	* POTFILES.in: Update missing files

2008-04-25 Gabor Kelemen  <kelemeng@gnome.org>

	* hu.po: Translation updated.

2008-04-16  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* nl.po: Updated Dutch translation by Wouter Bolsterlee.

2008-04-15  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2008-04-09  Aaron Bockover  <abock@gnome.org>

	* POTFILES.in: Fixed up

2008-04-07  Artur Flinta  <aflinta@gmail.com>

	* pl.po: Updated Polish translation by GNOME PL Team.

2008-04-07  Artur Flinta  <aflinta@gmail.com>

	* pl.po: Updated Polish translation by GNOME PL Team.

2008-04-06  Aaron Bockover  <abock@gnome.org>

	* POTFILES.in: Fixed up

2008-04-01  Artur Flinta  <aflinta@gmail.com>

	* pl.po: Updated Polish translation by GNOME PL Team.

2008-03-31  Artur Flinta  <aflinta@gmail.com>

	* pl.po: Updated Polish translation by GNOME PL Team.

2008-03-27  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* nl.po: Updated Dutch translation by Wouter Bolsterlee.

2008-03-27  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2008-03-26  Wouter Bolsterlee  <wbolster@svn.gnome.org>
