@@ -1,3 +1,7 @@
+2008-05-22  Gabriel Burt  <gabriel.burt@gmail.com>
+
+	* POTFILES.in: Updated
+
 2008-05-20  Daniel Abramov  <ex@vingrad.ru>
 
 	* ru.po: Updated Russian translation.
